--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -11,6 +11,7 @@ itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.3
 packaging==23.2
+Pillow==10.1.0
 PyJWT==2.8.0
 pymongo==4.5.0
 python-dateutil==2.8.2
