--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -16,7 +16,12 @@ PyJWT==2.8.0
 pymongo==4.5.0
 python-dateutil==2.8.2
 python-dotenv==1.0.0
+pytz==2023.3.post1
 requests==2.31.0
 reportlab==4.0.8
+six==1.16.0
+soupsieve==2.5
+tzdata==2023.3
 urllib3==2.0.7
 Werkzeug==3.0.1
+wheel==0.41.2
