--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -2,6 +2,7 @@ beautifulsoup4==4.12.2
 blinker==1.6.3
 bs4==0.0.1
 certifi==2023.7.22
+chardet==5.2.0
 charset-normalizer==3.3.2
 click==8.1.7
 dnspython==2.4.2
@@ -22,6 +23,6 @@ reportlab==4.0.8
 six==1.16.0
 soupsieve==2.5
 tzdata==2023.3
-urllib3==2.0.7
+urllib3==1.26.6
 Werkzeug==3.0.1
 wheel==0.41.2
